--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body class="sidenav-toggled">
+<body>
     <div ui-view="app"></div>
     <div ui-view="login"></div>
     <!--<div id="mydiv" if-loading>
